# freshers-hackathon

./: .clang-format  .gitignore  CMakeLists.txt  README.md  background.ase  comp.sh  format.sh  freshers-hackathon.kdev4  iso_run.sh  preprocessing.py
.kdev4/: freshers-hackathon.kdev4
assets/: hack source
assets/images/: background.ase
src/: assets.h  entity.c  entity.h  gamestate.c  gamestate.h  main.c  main2.c  mapwalls.c  mapwalls.h  utils.c  utils.h
